# wsjtx

./: .gitignore  CMakeLists.txt  CMakeLists_wsjtx.txt  Configuration.cpp  Configuration.ui  qt_helpers.cpp  qt_helpers.hpp  revision_utils.cpp  revision_utils.hpp
.github/scripts/: build-boost-macos.sh  build-fftw-macos.sh  build-hamlib-macos.sh  build-libusb-macos.sh  build-portaudio-macos.sh  build-qt-macos.sh  install-r-macos-gfortran.sh  install-xpack-gfortran-macos.sh  macos-qt-cache-key.sh  verify-macos-artifacts.sh  verify-macos-static-archives.sh
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  ci.yml  prepare-macos-qt.yml  release.yml
CMake/Modules/: generate_version_info.cmake  set_build_type.cmake
Network/: Cloudlog.cpp  PSKReporter.cpp  PSKReporter.hpp  PSKReporterConfiguration.cpp  PSKReporterIPFIX.cpp  PSKReporterIPFIX.hpp
Transceiver/: EmulateSplitTransceiver.cpp  TCITransceiver.cpp
bundle_fixup/: CMakeLists.txt
doc/user_guide/en/: acknowledgements.adoc  controls-functions-wide-graph.adoc  install-mac.adoc  intro_subsections.adoc  introduction.adoc  measurement_tools.adoc  settings-colors.adoc  support.adoc  wsjtx-main.adoc
docs/superpowers/plans/: 2026-07-22-colorblind-accessible-highlighting.md
docs/superpowers/specs/: 2026-07-22-colorblind-accessible-highlighting-design.md
lib/: get_q3list.f90  map65_mmdec.f90  refspectrum.f90
lib/ft8var/: cwfilter.f90
map65/: CMakeLists.txt  QtErrorCompat.h  Radio.cpp  about.cpp  astro.cpp  commons.cpp  commons.h  cqdatasender.cpp  cqdatasender.h  decode_label.h  devsetup.cpp  devsetup.h  devsetup.ui  fortran_mutex.cpp  fortran_mutex.hpp  getdev.cpp  liveCQSender.cpp  liveCQSender.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map65.pro  map65_decode_lifecycle.txt  messages.cpp  messages.h  paInputDevice.c  pa_get_device_info.c  plotter.cpp  plotter.h  set570.cpp  soundin.cpp  soundin.h  soundout.cpp  stdout_channel.h  txtune.cpp  txtune.h  widegraph.cpp  widegraph.h
map65/libm65/: CMakeLists.txt  afc65b.f90  astro.f90  astro0.f90  astrosub.f90  cacb_mod.f90  ccf2.f90  ccf65.f90  cgen65.f90  chkhist.f90  chkmsg.f90  coord.f90  datcom_ptrs_mod.f90  dcoord.f90  debug_log.f90  decode0.f90  decode1a.f90  decode65b.f90  decodes_mod.f90  deep65.f90  deg2grid.f90  demod64a.f90  display.f90  dot.f90  dpol.f90  encode65.f90  extract.f90  extract_shared_mod.f90  fchisq.f90  fchisq0.f90  fftw3.f90  fftw3_f77_interfaces.f90  fil6521.f90  filbig.f90  fmtmsg.f90  four2a.f90  four2a_legacy_wrap.f90  ftninit.f90  ftnquit.f90  ftrsd2_mod.f90  (+75 more)
models/: DecodeHighlightingModel.cpp  DecodeHighlightingModel.hpp
qmap/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  runtime_paths.cpp  runtime_paths.h
tests/: CMakeLists.txt  test_emulate_split_transceiver.cpp  test_http_user_agent.cpp
widgets/: displaytext.cpp  fastgraph.cpp  mainwindow.cpp  widegraph.cpp  widegraph.h  widegraph.ui
